--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "description": "Project description",
     "require": {
         "php": "^7.1.3",
+        "api-platform/api-pack": "^1.0",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
