--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "^7.1.3",
         "api-platform/api-pack": "^1.0",
+        "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
