--- a/.env.dist
+++ b/.env.dist
@@ -13,5 +13,5 @@ APP_SECRET=e1fb2513906cd1f4544c69b937ff1aab
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=pgsql://username:password@127.0.0.1:5432/database
 ###< doctrine/doctrine-bundle ###
