--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.1.3",
         "api-platform/api-pack": "^1.0",
         "doctrine/doctrine-migrations-bundle": "^1.3",
+        "ramsey/uuid": "^3.7",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
