--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,3 +1,7 @@
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
+    collection:
+        pagination:
+            page_parameter_name: page
+            client_items_per_page: true
