API filters for GET Translations

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,9 +3,14 @@ api_platform:
         paths: ['%kernel.project_dir%/src/Entity']
     collection:
         order: 'ASC'
-        order_parameter_name: 'key'
+        order_parameter_name: 'sort'
         pagination:
             page_parameter_name: page
             client_items_per_page: true
             items_per_page: 50
             items_per_page_parameter_name: 'size'
+    # Enable the Swagger documentation and export.
+    enable_swagger: true
+
+    # Enable Swagger ui.
+    enable_swagger_ui: true
