API version defined

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,7 @@
 api_platform:
+    version: 0.1.0
+    enable_swagger: true
+    enable_swagger_ui: true
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     collection:
@@ -9,8 +12,3 @@ api_platform:
             client_items_per_page: true
             items_per_page: 50
             items_per_page_parameter_name: 'size'
-    # Enable the Swagger documentation and export.
-    enable_swagger: true
-
-    # Enable Swagger ui.
-    enable_swagger_ui: true
