Translation sorting added

--- a/config/packages/api_filters.yml
+++ b/config/packages/api_filters.yml
@@ -1,5 +1,7 @@
 services:
   translation.search_filters:
       parent: 'api_platform.doctrine.orm.search_filter'
-      arguments: [ { key: 'partial', language: 'partial' } ]
+      tags: [ 'api_platform.filter' ]
+  translation.order_filter:
+      parent: 'api_platform.doctrine.orm.order_filter'
       tags: [ 'api_platform.filter' ]
