--- a/config/packages/api_filters.yml
+++ b/config/packages/api_filters.yml
@@ -1,7 +1,7 @@
 services:
-  translation.search_filters:
+  search_filter:
       parent: 'api_platform.doctrine.orm.search_filter'
       tags: [ 'api_platform.filter' ]
-  translation.order_filter:
+  order_filter:
       parent: 'api_platform.doctrine.orm.order_filter'
       tags: [ 'api_platform.filter' ]
